[project]
name = "amplitude-change-user-id"
version = "0.1.0"
description = "Scripts for managing Amplitude user IDs"
authors = [
    {name = "Alaa"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
